--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -7,5 +7,5 @@
 <%= link_to "Add New Song", new_song_path %>
 <%= form_tag :songs_upload, multipart: true do %>
   <%= file_field_tag :songs %>
-  <%= submit_tag "Import songs" %>
+  <%= submit_tag :'Import Songs' %>
 <% end %>
